src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Override_From_Address__c</fullName>
        <description>CEC Override From Address is a dependant picklist of email addresses based on the country name picklist</description>
        <label>Override From Address</label>
        <picklist>
            <controllingField>Country_Name__c</controllingField>
            <picklistValues>
                <fullName>bertolli@mizkan.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bertollioliveoilusa@deoleo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>carapelliusa@deoleo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>carbonellusa@deoleo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Careline.bd@unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cec.philippines@unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comments.Canada@benjerry.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>comments@talentigelato.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumer.affairs-za@unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer-Hotline.Thailand@unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumerproduct@mizkan.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumerrelations.uanz@unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.cl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.com.ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.com.bo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.com.pe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.com.py</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumidor@sac-unilever.com.uy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>info@bertolli.ca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>info@bluewater.ca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>info@carapelli.ca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>info@gortons.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product.Contactus@benjerry.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raabta.upl@unilever.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ragu.ca@mizkan.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ragu.us@mizkan.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reply.canada@sunproductscorp.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reply.us@sunproductscorp.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sac@atendimentounilever.com.br</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PII_Data_Check__c</fullName>
        <description>CEC - Personal Information in Description</description>
        <formula>IF( PII_Warning_Check__c,IMAGE(&quot;/resource/CEC_Safety_Alert&quot;, &quot;Warning&quot;, 20, 20), IMAGE(&quot;/resource/CEC_No_Warning&quot;, &quot;WarningFree&quot;, 20, 20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green: No PII Data ; Red: PII Data present in the Description field</inlineHelpText>
        <label>PII Data Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PII_Warning_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII Warning Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Care__c</fullName>
        <description>CEC : Personal Care CosmetoVigilance Survey link</description>
        <formula>HYPERLINK(&quot;http://survey.clicktools.com/go?iv=&quot; 
&amp; $Setup.cec_Org_Settings__c.Cosmetovigilence_Questionnaire_Id__c
&amp; &quot;&amp;q1=&quot; &amp; Id
&amp; &quot;&amp;q2=&quot; &amp; CaseNumber
&amp; &quot;&amp;q3=&quot; &amp; TEXT(CreatedDate)
&amp; &quot;&amp;q4=&quot; &amp; Text(Country_Name__c)
&amp; &quot;&amp;q7=&quot; &amp; L2_Product_Category__c
&amp; &quot;&amp;q8=&quot; &amp; L7_Product_Category__c
&amp; &quot;&amp;q9=&quot; &amp; Case_Brand__c
&amp; &quot;&amp;q10=&quot; &amp; CEC_Product_Reporting_Name__c
&amp; &quot;&amp;q11=&quot; &amp; Product_UPC__c
&amp; &quot;&amp;q12=&quot; &amp; Production_Code__c
&amp; &quot;&amp;q13=&quot; &amp; TEXT(Origin)
&amp; &quot;&amp;q14=&quot; &amp; Global_Reason_L5_desc__c,
&quot;Personal Care Cosmetovigilence&quot;)</formula>
        <label>Personal Care</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CPG_Code__c</fullName>
        <description>CEC : To fetch the Global CPG code of the product</description>
        <formula>CEC_Product__r.Global_CPG_Code__c</formula>
        <label>Product CPG Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>CEC_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ISO_Country_Code__c</fullName>
        <description>CEC: To fetch the ISO country code of the product</description>
        <formula>CEC_Product__r.ISO_Country_Code__c</formula>
        <label>Product ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Skill__c</fullName>
        <description>CEC - Specifies the Category of the Product.</description>
        <label>Product Skill</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee &amp; Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants &amp; Fragrances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Home Care Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Personal Care Cat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent and Finance Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plantations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestige Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Cleaning Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tea and Soy &amp; Fruit Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Purification Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deoleo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; B Foods</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_UPC__c</fullName>
        <description>cec_Product_UPC of the product</description>
        <formula>CEC_Product__r.GTIN_EAN_UPC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product UPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Code__c</fullName>
        <description>cec_the plant code of the product on where it is manufactured</description>
        <label>Production Code</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>cec_product’s purchase date by the consumer</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Retention_Days__c</fullName>
        <formula>Reason_Code__r.Retention_Days__c</formula>
        <label>Reason Code Retention Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC : Look up field to populate the Reason Code.</description>
        <label>Reason Code</label>
        <referenceTo>mdm_Reason_Code__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_L0_desc__c</fullName>
        <description>Retrieves the L0 Reason Code description from Reason Code table</description>
        <formula>Reason_Code__r.L0_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason L0 desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_L1_desc__c</fullName>
        <description>Retrieves the L1 Reason Code description from Reason Code table</description>
        <formula>Reason_Code__r.L1_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason L1 desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_L2_desc__c</fullName>
        <description>Retrieves the L2 Reason Code description from Reason Code table</description>
        <formula>Reason_Code__r.L2_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason L2 desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEB_Case_Number__c</fullName>
        <description>TO: SEB Case Number</description>
        <label>SEB Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEB_Closed_Date__c</fullName>
        <description>TO: SEB Closed Date</description>
        <label>SEB Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMS_Inbound_Number__c</fullName>
        <description>CEC: To store the inbound number for SMS</description>
        <label>SMS Inbound Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Mobile_Number__c</fullName>
        <label>SMS Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sapient_Campaign__c</fullName>
        <description>Data retrieved from Sapient web forms</description>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sapient_Corporate__c</fullName>
        <description>Data retrieved from Sapient web forms</description>
        <label>Corporate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sapient_DCS_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sapient DCS Webservice ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sapient_Micro_Site_ID__c</fullName>
        <description>Data retrieved from Sapient web forms</description>
        <label>Micro Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Birthdate__c</fullName>
        <description>CEC Search Birthdate is used to default the birthdate from contact us page</description>
        <label>Search Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Email__c</fullName>
        <description>CEC Search Email is used to default the email from contact us page</description>
        <label>Search Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Search_First_Name__c</fullName>
        <description>CEC Search First Name is used to default the firstname from contact us page.</description>
        <label>Search First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Home_Phone__c</fullName>
        <description>CEC Search Home Phone is used to default the home phone from contact us page</description>
        <label>Search Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Search_Last_Name__c</fullName>
        <description>CEC Search Last Name is used to default the lastname from contact us page</description>
        <label>Search Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Mailing_City__c</fullName>
        <description>CEC Search Mailing City is used to default the mailing city from contact us page.</description>
        <label>Search Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Mailing_Country__c</fullName>
        <description>CEC Search Mailing Country is used to default the country from the contact us page</description>
        <label>Search Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Mailing_State_Province__c</fullName>
        <description>CEC Search Mailing State/Province is used to default the state /province from contact us page</description>
        <label>Search Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Mailing_Street__c</fullName>
        <description>CEC Search Mailing Street is used to default the mailing street from contact us page</description>
        <label>Search Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Mailing_Zip_Postal_Code__c</fullName>
        <description>CEC Search Mailing Zip/Postal Code is used to default the zip code from the contact us page</description>
        <label>Search Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Mobile__c</fullName>
        <description>CEC Search Mobile is used to default the mobile number from contact us page</description>
        <label>Search Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Search_Other_Phone__c</fullName>
        <description>CEC Search Other Phone is used to default the other phone from contact us page</description>
        <label>Search Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Search_Phone__c</fullName>
        <description>CEC Search Phone is used to default phone from contact us page</description>
        <label>Search Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Search_Salutation__c</fullName>
        <description>CEC Search Salutation is used to default the salutation from contact us page .</description>
        <label>Search Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_Assignment_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Assignment Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill_Match__c</fullName>
        <description>CEC - A formula field to check whether Language &amp; Product  skill of a case contains Language &amp; Product Category of a User. And also checks the Status , Market of a case &amp; whether the case is assigned to a Queue or not.</description>
        <formula>AND(Case_Brand_Mapping__r.Country__r.Enable_Skill_Routing__c ,Is_Language_Skill_Match__c,Is_Product_Skill_Match__c,(TEXT(Status)=&apos;New&apos;),IF(Owner:Queue.DeveloperName !=&apos;&apos;, TRUE, FALSE))</formula>
        <label>Skill Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_External_Id__c</fullName>
        <description>CEC: Field will be populated with Facebook page Id or Twitter handle when case infromation is updated on the conversation object</description>
        <label>Social Media External Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Response_Survey_URL__c</fullName>
        <formula>&apos;http://survey.clicktools.com/app/survey/go.jsp?iv=&apos; + $Setup.cec_Org_Settings__c.Social_Response_Survey_Id__c + &apos;&amp;q1=&apos; + Id + &apos;&amp;q2=&apos; + $User.Id + &apos;&amp;q4=&apos; + CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Response Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <description>cec_the product’s purchase location information</description>
        <label>Store Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC : Look up field to populate the Store Name.</description>
        <label>Store</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>$Source.Country_Name__c</field>
                <operation>equals</operation>
                <valueField>cec_Store__c.Country__r.ISO_Country_Dependency_Medium_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Country_Name__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>cec_Store__c.Country__r.ISO_Country_Dependency_Medium_Name__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cec_Store__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <description>TO: Picklist to differentiate between CEC and George Case Market Mapping</description>
        <label>Tag</label>
        <picklist>
            <picklistValues>
                <fullName>CEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>George</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transient_External_Id__c</fullName>
        <description>Contains the external Id value which is used to populate the CBM for Transient case</description>
        <formula>If( Social_Media_External_Id__c	&lt;&gt; &apos;&apos;,Social_Media_External_Id__c + &apos;@unilever.com&apos;,If( SMS_Inbound_Number__c &lt;&gt; &apos;&apos;,SMS_Inbound_Number__c + &apos;@unilever.com&apos;,&apos;&apos;))</formula>
        <label>Transient External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Code_Detail__c</fullName>
        <description>cec_UPC code detail</description>
        <label>UPC Code Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilever_Cluster__c</fullName>
        <description>CEC: Displays the cluster field value from the Unilever geography</description>
        <formula>Country__r.Country__r.Unilever_Cluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unilever Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>cec_unique id for the issue</description>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Used_Product_Previously__c</fullName>
        <description>CEC - Used Product Previously, to capture whether the consumer is a regular user of the product</description>
        <inlineHelpText>-Brand : Used The Brand Before, NOT The Product In Question

-New User : No Prior Use Of This Product Or Used A Competitor Brand

-Regular User : Used This Exact Product &amp; Variant Before

-Unknown : Information Not Available</inlineHelpText>
        <label>Used Product Previously</label>
        <picklist>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows WorkIt! to update the total work time for this case.</description>
        <label>WorkIt: Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Hours__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  floor(floor(WorkIt2__Total_Business_Seconds__c) / 3600 )
 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Minutes__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  FLOOR(MOD(floor(WorkIt2__Total_Business_Seconds__c) ,3600) / 60 ) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Seconds__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  MOD( floor(WorkIt2__Total_Business_Seconds__c) ,60) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Hours__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  WorkIt2__Total_Business_Seconds__c / 3600, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Minutes__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  WorkIt2__Total_Business_Seconds__c / 60 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Seconds__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  WorkIt2__Total_Business_Seconds__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,TEXT(WorkIt2__Business_Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Business_Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Business_Seconds__c) &amp; &quot;s &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Calculated_Business_Seconds__c</fullName>
        <label>WINTERNAL_D: Calculated Business Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Calculated_Seconds__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WINTERNAL_D: Calculated Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Case_Time_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WINTERNAL: Case Time Total</label>
        <referenceTo>WorkIt2__Case_Time_Total__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Closed_with_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if the case was closed after WorkIt! was installed.</description>
        <label>WINTERNAL: Closed with Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Color__c</fullName>
        <label>WINTERNAL_D: Color</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells WorkIt! not to time this case.</description>
        <label>WorkIt: Don&apos;t Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Hours__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  floor(floor(WorkIt2__Total_Seconds__c) / 3600 )
 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Minutes__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  FLOOR(MOD(floor(WorkIt2__Total_Seconds__c) ,3600) / 60 ) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Overtime_Status__c</fullName>
        <formula>CASE(  WorkIt2__Case_Time_Total__r.WorkIt2__Color__c  , 
&quot;Red&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_01.png&quot;, &quot;Red&quot;) ,
&quot;Orange&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_02.png&quot;, &quot;Orange&quot;) ,
&quot;Yellow&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_03.png&quot;, &quot;Yellow&quot;) ,
&quot;Blue&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_05.png&quot;, &quot;Blue&quot;) ,
&quot;Violet&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_06.png&quot;, &quot;Violet&quot;) ,
IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_04.png&quot;, &quot;Green&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Seconds__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  MOD( floor(WorkIt2__Total_Seconds__c) ,60) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Hours__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  WorkIt2__Total_Seconds__c / 3600, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Minutes__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  WorkIt2__Total_Seconds__c / 60 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Seconds__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,  WorkIt2__Total_Seconds__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time__c</fullName>
        <formula>IF(WorkIt2__Allow_Update__c,TEXT(WorkIt2__Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Seconds__c) &amp; &quot;s &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Total_Business_Seconds__c</fullName>
        <formula>WorkIt2__Case_Time_Total__r.WorkIt2__Calculated_Business_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WINTERNAL: Total Business Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Total_Seconds__c</fullName>
        <formula>WorkIt2__Case_Time_Total__r.WorkIt2__Calculated_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WINTERNAL: Total Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dgai__Sugestion_ID__c</fullName>
        <label>Sugestion ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgai__Template_ID__c</fullName>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFormKnown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CEC : Used in the VF page - CEC_CaseInline</description>
        <label>isFormKnown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPacksizeKnown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CEC : Used in the VF page - CEC_CaseInline</description>
        <label>isPacksizeKnown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVariantKnown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CEC : Used in the VF page - CEC_CaseInline</description>
        <label>isVariantKnown</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>